Servicios y gastos nuevos

--- a/Principal/templates/Principal/gasto_agregar.html
+++ b/Principal/templates/Principal/gasto_agregar.html
@@ -5,19 +5,15 @@
 {% block main %}
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Servicios</h1>
+        <h1 class="mt-4">Gastos</h1>
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item"><a href="index.html">Tablero</a></li>
-            <li class="breadcrumb-item active">Servicios</li>
+            <li class="breadcrumb-item"><a href="{% url 'Inicio' %}">Inicio</a></li>
+            <li class="breadcrumb-item active">Nuevo gasto</li>
         </ol>
         <div class="card mb-4">
             <div class="card-body">
                 <p class="mb-0">
-                    En esta pagina agregaremos nuevos
-                    <code>servicios</code>
-                    que realiza 
-                    <code>Nails Factory</code>
-                    junto a una descripcion.
+                    Para agregar un nuevo <code>gasto</code>, completa todos los siguientes datos:                   
                 </p>
                 <p class="mb-0">
                     <form action="" method="POST">
@@ -26,12 +22,13 @@
                             {{ mi_formulario.as_table }}
                         </table>
                         <input type="submit" value="Enviar">
+                       
                     </form>
                 </p>    
             </div>
         </div>
         <div style="height: 100vh"></div>
-        <div class="card mb-4"><div class="card-body">Acá, puedo agregar una descripcion final</div></div>
+        <div class="card mb-4"><div class="card-body">Sitio en construcción</div></div>
     </div>
 </main>
     {% endblock main %}
