--- a/Principal/templates/Principal/base.html
+++ b/Principal/templates/Principal/base.html
@@ -58,7 +58,7 @@
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="{% url 'ServicioAgregar' %}">Agregar</a>
                                     <a class="nav-link" href="{% url 'ServicioBuscar' %}">Buscar</a>
-                                    <a class="nav-link" href="{% url 'ServicioBuscar' %}">Mostrar todos</a>
+                                    <a class="nav-link" href="{% url 'ServicioTodos' %}">Mostrar todos</a>
                                 </nav>
                             </div>                            
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts2">
@@ -68,16 +68,24 @@
                             </a>
                             <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{% url 'GastoAgregar' %}">ABM Gastos</a>
-                                    <a class="nav-link" href="layout-sidenav-light.html">Metricas</a>
+                                    <a class="nav-link" href="{% url 'GastoAgregar' %}">Agregar</a>
+                                    <a class="nav-link" href="{% url 'GastoTodos' %}">Mostrar todos</a>
+                                    <a class="nav-link" href="{% url 'Blanco' %}">Metricas</a>
                                 </nav>
                             </div>    
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Productos
+                                Insumos
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
-                            <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
+                            <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="{% url 'InsumoAgregar' %}">Agregar</a>
+                                    <a class="nav-link" href="{% url 'InsumoTodos' %}">Mostrar todos</a>
+                                </nav>
+                            </div>    
+
+                            <!--div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
                                         Authentication
@@ -102,13 +110,13 @@
                                         </nav>
                                     </div>
                                 </nav>
-                            </div>
+                            </div-->
                             <div class="sb-sidenav-menu-heading">COMPLEMENTOS</div>
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="{% url 'Blanco' %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Graficos
                             </a>
-                            <a class="nav-link" href="{% url 'Tablas' %}">
+                            <a class="nav-link" href="{% url 'Blanco' %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Tablas
                             </a>
