--- a/Principal/templates/Principal/index.html
+++ b/Principal/templates/Principal/index.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Servicios registrados: {{tarjeta_servicio_cantidad}}</div>
+                                    <div class="card-body">Servicios disponibles: {{tarjeta_servicio_cantidad}}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="{% url 'ServicioTodos' %}">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -34,7 +34,7 @@
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">Ventas realizas: 0</div>
+                                    <div class="card-body">Servicios realizados: 0</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="#">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
